# Ecowatt_Polaris

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
EcoWatt-LocalAPI/: app_local.py
EcoWatt-LocalAPI/logs/: ecowatt-20250925.txt
configs/: baseline.sdkconfig  optimized.sdkconfig
docs/: milestone5_power_report.md
main/: CMakeLists.txt  Kconfig  Kconfig.projbuild  acquisition.cpp  acquisition.hpp  buffer.cpp  buffer.hpp  codec.cpp  codec.hpp  control.cpp  control.hpp  fota.cpp  fota.hpp  main.cpp  modbus.cpp  modbus.hpp  nvstore.cpp  nvstore.hpp  packetizer.cpp  packetizer.hpp  security.cpp  security.hpp  transport.hpp  transport_idf.cpp
report_baseline_vs_opt/: report.md
scripts/: generate_comparison_report.py  power_report.py
server/: app.py  requirements.txt  test_db.py
server/logs/: fota_chunk_0000.b64  fota_chunk_0001.b64  fota_chunk_0002.b64  fota_chunk_0003.b64  fota_chunk_0004.b64  fota_chunk_0005.b64  fota_chunk_0006.b64  fota_chunk_0007.b64  fota_chunk_0008.b64  fota_chunk_0009.b64  fota_chunk_0010.b64  fota_chunk_0011.b64  fota_chunk_0012.b64  fota_chunk_0013.b64  fota_chunk_0014.b64  fota_chunk_0015.b64  fota_chunk_0016.b64  fota_chunk_0017.b64  fota_chunk_0018.b64  fota_chunk_0019.b64  fota_chunk_0020.b64  fota_chunk_0021.b64  fota_chunk_0022.b64  fota_chunk_0023.b64  fota_chunk_0024.b64  fota_chunk_0025.b64  fota_chunk_0026.b64  fota_chunk_0027.b64  fota_chunk_0028.b64  fota_chunk_0029.b64  fota_chunk_0030.b64  fota_chunk_0031.b64  fota_chunk_0032.b64  fota_chunk_0033.b64  fota_chunk_0034.b64  fota_chunk_0035.b64  fota_chunk_0036.b64  fota_chunk_0037.b64  fota_chunk_0038.b64  fota_chunk_0039.b64  (+87 more)
test/: 10_queue_config.sh  20_queue_command.sh  30_security_bad_mac.py  31_security_good_mac.py  32_security_test_suite.py  33_device_security_validation.py  34_test_security_via_real_server.py  40_fota_pack.py  FOTA_README.md  generate_fota_artifacts.sh
test/logs/: fota_manifest.json
